--- a/index.html
+++ b/index.html
@@ -15,53 +15,68 @@
     <title>Prime Barber - Precisao e Elegancia em Cada Detalhe!</title>
 </head>
 <body>
-    <!-- HEADER--> >
+    <!-- HEADER -->
     <div class="bg-home">
-    <header>
+        <header>
+            <nav class="header-content container">
+                <div class="header-icons">
+                    <a href="#">
+                        <i class="fa-brands fa-instagram fa-2x"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook fa-2x"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-whatsapp fa-2x"></i>
+                    </a>
+                </div>
 
-        <nav class="header-content container">
-            <div class="header-icons">
-                <a href="#">
-                    <i class="fa-brands fa-instagram fa-2x"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-facebook fa-2x"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-whatsapp fa-2x"></i>
-                </a>
-            </div>
+                <div class="header-logo">
+                    <img 
+                        src="assets/logo.svg"
+                        alt="Logo da barbearia"
+                    />
+                </div>
 
-            <div class="header-logo">
-                <img 
-                    src="assets/logo.svg"
-                    alt=" logo barber"
-                 />
-            </div>
+                <div>
+                    <a class="header-button" href="#">
+                        Agendar horário
+                    </a>
+                </div>
+            </nav>
 
-            <div>
-                <a class="header-button" href="#">
+
+
+            <main class="hero container">
+                <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
+                <p>Horário de funcionamento: 09:00 às 19:00</p>
+                <a href="#" class="button-contact" target="_blank">
                     Agendar horário
                 </a>
-            </div>
-
-        </nav>
+            </main>
 
     </header>
-    </div>
+
+</div>
+
+ <!-- ABOUT --> 
+ <section class="about">
+    <div class="container about-content">
+   <div>
+       <img 
+       src="assets/images.svg"
+        alt="Imagem sobre a barbearia"
+        />
+   </div>
+<div class="about-description">
+   <h2>Sobre</h2>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sunt ratione quam? Dolore aliquam dolorem consequuntur eos! Veniam porro, dolore et ipsam temporibus placeat pariatur repellat! Optio dolores culpa reprehenderit.</p>
+   <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong>
+</div>  
+
+</div>
+   </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-    
 </body>
 </html>
