--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -11,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
     <title>Prime Barber - Precisao e Elegancia em Cada Detalhe!</title>
 </head>
@@ -19,7 +22,7 @@
     <div class="bg-home">
         <header>
             <nav class="header-content container">
-                <div class="header-icons">
+                <div class="header-icons" data-aos="fade-down">
                     <a href="#">
                         <i class="fa-brands fa-instagram fa-2x"></i>
                     </a>
@@ -31,14 +34,17 @@
                     </a>
                 </div>
 
-                <div class="header-logo">
+                <div class="header-logo" data-aos="fade-up" data-aos-delay="300" >
                     <img 
+                    data-aos="flip-up"
+                    data-aos-delay="400"
+                    data-aos-duration="1500"
                         src="assets/logo.svg"
                         alt="Logo da barbearia"
                     />
                 </div>
 
-                <div>
+                <div data-aos="fade-down">
                     <a class="header-button" href="#">
                         Agendar horário
                     </a>
@@ -50,8 +56,11 @@
             <main class="hero container">
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
                 <p>Horário de funcionamento: 09:00 às 19:00</p>
-                <a href="#" class="button-contact" target="_blank">
-                    Agendar horário
+                <a 
+                href="https://api.whatsapp.com/send?phone=139764746740000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
+                class="button-contact"
+                 target="_blank">
+                Agendar horário
                 </a>
             </main>
 
@@ -78,5 +87,108 @@
    </section>
 
 
+<!-- SERVICES -->
+
+    <section class="services">
+        <div class="services-content container">
+            <h2>Serviços</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga doloremque neque tempore ea sequi minus ipsa quas quis quae perferendis rem inventore maiores doloribus labore, suscipit omnis dicta itaque a!</p>
+
+        </div>
+        <section class="haircuts">
+
+            <div class="haircut">
+                <img src="assets/corte1.png" 
+                alt="Corte normal"
+                />
+                <div class="haircut-info">
+                    <strong>Corte normal</strong>
+                    <button>
+                        R$ 45,00
+                    </button>
+                </div>
+
+
+            </div>
+            <div class="haircut">
+                <img src="assets/corte2.png" 
+                alt="Barba Completa"
+                />
+                <div class="haircut-info">
+                    <strong>Barba completa</strong>
+                    <button>
+                        R$ 35,00
+                    </button>
+                </div>
+            </div>
+
+
+            <div class="haircut">
+                <img src="assets/corte3.png" 
+                alt="Corte e barba"
+                />
+                <div class="haircut-info">
+                    <strong>Corte e barba</strong>
+                    <button>
+                        R$ 85,00
+                    </button>
+                </div>
+            </div>
+
+        </section>
+
+    </section>
+
+
+
+<!-- FOOTER -->
+
+<div class="services">
+<h2>Venha conhecer</h2>
+</div>
+
+<iframe
+width="100%"
+ src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15833.33713756357!2d-48.20992536267546!3d-7.2026493494856085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbarbearia!5e0!3m2!1spt-BR!2sbr!4v1723032028388!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+ <footer class="footer">
+    <div class="footer-icons">
+        <a href="#">
+            <i class="fa-brands fa-instagram fa-2x"></i>
+        </a>
+        <a href="#">
+            <i class="fa-brands fa-facebook fa-2x"></i>
+        </a>
+        <a href="#">
+            <i class="fa-brands fa-whatsapp fa-2x"></i>
+        </a>
+    </div>
+
+    <div>
+        <img
+         src="assets/logo.svg"
+
+          alt="Logo barbearia"
+          />
+    </div>
+
+    <p>© 2024 Prime Barber. Todos os direitos reservados.</p>
+ </footer>
+
+ <!-- Button Whatsapp -->
+
+ <a 
+    href="https://api.whatsapp.com/send?phone=139764746740000000&text=Quero%20fazer%20um%20agendamento%20hoje!"
+    class="btn-whatsapp"
+    target="_blank"
+     >
+    <img src="/assets/whatssapp.svg" alt="Botao whatsapp"/>
+<span class="tooltip-text">Agende seu horário</span>
+ </a>
+
+
+
+
+ <script src="script.js"></script>
 </body>
 </html>
