--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                         <i class="fa-brands fa-facebook fa-2x"></i>
                     </a>
                     <a href="#">
-                        <i class="fa-brands fa-whatsapp fa-2x"></i>
+                        <i class="fa-brands fa-tiktok fa-2x"></i>
                     </a>
                 </div>
 
                 <div class="header-logo" data-aos="fade-up" data-aos-delay="300" >
                     <img 
                     data-aos="flip-up"
-                    data-aos-delay="400"
+                    data-aos-delay="300"
                     data-aos-duration="1500"
                         src="assets/logo.svg"
                         alt="Logo da barbearia"
@@ -53,7 +53,7 @@
 
 
 
-            <main class="hero container">
+            <main class="hero container" data-aos="fade-up" data-aos-delay="400">
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
                 <p>Horário de funcionamento: 09:00 às 19:00</p>
                 <a 
@@ -71,13 +71,17 @@
  <!-- ABOUT --> 
  <section class="about">
     <div class="container about-content">
-   <div>
+   <div data-aos="zoom-in" data-aos-delay="100">
        <img 
        src="assets/images.svg"
         alt="Imagem sobre a barbearia"
         />
    </div>
-<div class="about-description">
+
+<div 
+    class="about-description"
+    data-aos="zoom-out-left" data-aos-delay="250"
+>
    <h2>Sobre</h2>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sunt ratione quam? Dolore aliquam dolorem consequuntur eos! Veniam porro, dolore et ipsam temporibus placeat pariatur repellat! Optio dolores culpa reprehenderit.</p>
    <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong>
@@ -97,7 +101,7 @@
         </div>
         <section class="haircuts">
 
-            <div class="haircut">
+            <div class="haircut" data-aos="fade-up" data-aos-delay="150">
                 <img src="assets/corte1.png" 
                 alt="Corte normal"
                 />
@@ -110,7 +114,7 @@
 
 
             </div>
-            <div class="haircut">
+            <div class="haircut" data-aos="fade-up" data-aos-delay="250">
                 <img src="assets/corte2.png" 
                 alt="Barba Completa"
                 />
@@ -123,7 +127,7 @@
             </div>
 
 
-            <div class="haircut">
+            <div class="haircut" data-aos="fade-up" data-aos-delay="400">
                 <img src="assets/corte3.png" 
                 alt="Corte e barba"
                 />
@@ -181,11 +185,11 @@ width="100%"
     href="https://api.whatsapp.com/send?phone=139764746740000000&text=Quero%20fazer%20um%20agendamento%20hoje!"
     class="btn-whatsapp"
     target="_blank"
+    data-aos="zoom-in-up" data-aos-delay="400"
      >
     <img src="/assets/whatssapp.svg" alt="Botao whatsapp"/>
 <span class="tooltip-text">Agende seu horário</span>
  </a>
-
 
 
 
