--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
                 <div data-aos="fade-down">
                     <!-- Link para a página de agendamento -->
-                    <a class="header-button" href="http://localhost:3000/"> <!-- Atualize este link -->
+                    <a class="header-button" href="http://localhost:3000/"> 
+
                         Agendar horário
+                        
                     </a>
                 </div>
             </nav>
@@ -54,7 +56,7 @@
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
                 <p>Horário de funcionamento: 09:00 às 19:00</p>
                 <a 
-                    href="https://api.whatsapp.com/send?phone=139764746740000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
+                    href="https://api.whatsapp.com/send?phone=6399261541901&text=Faça%20seu%20agendamento!" 
                     class="button-contact"
                     target="_blank"
                 >
@@ -146,7 +148,7 @@
                 <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
             <a href="#">
-                <i class="fa-brands fa-whatsapp fa-2x"></i>
+                <i class="fa-brands fa-tiktok fa-2x"></i>
             </a>
         </div>
 
@@ -162,7 +164,7 @@
 
     <!-- Button Whatsapp -->
     <a 
-        href="https://api.whatsapp.com/send?phone=139764746740000000&text=Quero%20fazer%20um%20agendamento%20hoje!"
+        href="https://api.whatsapp.com/send?phone=6399261541901&text=Faça%20seu%20agendamento!"
         class="btn-whatsapp"
         target="_blank"
         data-aos="zoom-in-up" data-aos-delay="400"
